src/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> RETTYPE FUNCNAME LPAREN RPAREN LCPAREN BODY RCPAREN
Rule 2     BODY -> DECL SEMICOL BODY
Rule 3     BODY -> ASSIGN SEMICOL BODY
Rule 4     BODY -> <empty>
Rule 5     DECL -> DTYPE DECLIST
Rule 6     DECLIST -> ID COMMA DECLIST
Rule 7     DECLIST -> ID
Rule 8     ID -> WORD
Rule 9     ID -> REF ID
Rule 10    aID -> WORD
Rule 11    aID -> AMP aID
Rule 12    aID -> REF aID
Rule 13    LHS_POINT -> REF aID
Rule 14    ASSIGN -> WORD EQUALS Wrhs
Rule 15    ASSIGN -> LHS_POINT EQUALS Wrhs
Rule 16    Wrhs -> Wrhs PLUS Wrhs
Rule 17    Wrhs -> Wrhs MINUS Wrhs
Rule 18    Wrhs -> Wrhs REF Wrhs
Rule 19    Wrhs -> Wrhs DIV Wrhs
Rule 20    Wrhs -> aID
Rule 21    Wrhs -> Natom
Rule 22    Wrhs -> MINUS Wrhs
Rule 23    Natom -> NUMBER

Terminals, with rules where they appear

AMP                  : 11
COMMA                : 6
DIV                  : 19
DTYPE                : 5
EQUALS               : 14 15
FUNCNAME             : 1
LCPAREN              : 1
LPAREN               : 1
MINUS                : 17 22
NUMBER               : 23
PLUS                 : 16
RCPAREN              : 1
REF                  : 9 12 13 18
RETTYPE              : 1
RPAREN               : 1
SEMICOL              : 2 3
WORD                 : 8 10 14
error                : 

Nonterminals, with rules where they appear

ASSIGN               : 3
BODY                 : 1 2 3
DECL                 : 2
DECLIST              : 5 6
ID                   : 6 7 9
LHS_POINT            : 15
Natom                : 21
Wrhs                 : 14 15 16 16 17 17 18 18 19 19 22
aID                  : 11 12 13 20
expression           : 0

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . RETTYPE FUNCNAME LPAREN RPAREN LCPAREN BODY RCPAREN

    RETTYPE         shift and go to state 2

    expression                     shift and go to state 1

state 1

    (0) S' -> expression .



state 2

    (1) expression -> RETTYPE . FUNCNAME LPAREN RPAREN LCPAREN BODY RCPAREN

    FUNCNAME        shift and go to state 3


state 3

    (1) expression -> RETTYPE FUNCNAME . LPAREN RPAREN LCPAREN BODY RCPAREN

    LPAREN          shift and go to state 4


state 4

    (1) expression -> RETTYPE FUNCNAME LPAREN . RPAREN LCPAREN BODY RCPAREN

    RPAREN          shift and go to state 5


state 5

    (1) expression -> RETTYPE FUNCNAME LPAREN RPAREN . LCPAREN BODY RCPAREN

    LCPAREN         shift and go to state 6


state 6

    (1) expression -> RETTYPE FUNCNAME LPAREN RPAREN LCPAREN . BODY RCPAREN
    (2) BODY -> . DECL SEMICOL BODY
    (3) BODY -> . ASSIGN SEMICOL BODY
    (4) BODY -> .
    (5) DECL -> . DTYPE DECLIST
    (14) ASSIGN -> . WORD EQUALS Wrhs
    (15) ASSIGN -> . LHS_POINT EQUALS Wrhs
    (13) LHS_POINT -> . REF aID

    RCPAREN         reduce using rule 4 (BODY -> .)
    DTYPE           shift and go to state 10
    WORD            shift and go to state 11
    REF             shift and go to state 13

    BODY                           shift and go to state 7
    DECL                           shift and go to state 8
    ASSIGN                         shift and go to state 9
    LHS_POINT                      shift and go to state 12

state 7

    (1) expression -> RETTYPE FUNCNAME LPAREN RPAREN LCPAREN BODY . RCPAREN

    RCPAREN         shift and go to state 14


state 8

    (2) BODY -> DECL . SEMICOL BODY

    SEMICOL         shift and go to state 15


state 9

    (3) BODY -> ASSIGN . SEMICOL BODY

    SEMICOL         shift and go to state 16


state 10

    (5) DECL -> DTYPE . DECLIST
    (6) DECLIST -> . ID COMMA DECLIST
    (7) DECLIST -> . ID
    (8) ID -> . WORD
    (9) ID -> . REF ID

    WORD            shift and go to state 19
    REF             shift and go to state 20

    DECLIST                        shift and go to state 17
    ID                             shift and go to state 18

state 11

    (14) ASSIGN -> WORD . EQUALS Wrhs

    EQUALS          shift and go to state 21


state 12

    (15) ASSIGN -> LHS_POINT . EQUALS Wrhs

    EQUALS          shift and go to state 22


state 13

    (13) LHS_POINT -> REF . aID
    (10) aID -> . WORD
    (11) aID -> . AMP aID
    (12) aID -> . REF aID

    WORD            shift and go to state 25
    AMP             shift and go to state 26
    REF             shift and go to state 23

    aID                            shift and go to state 24

state 14

    (1) expression -> RETTYPE FUNCNAME LPAREN RPAREN LCPAREN BODY RCPAREN .

    $end            reduce using rule 1 (expression -> RETTYPE FUNCNAME LPAREN RPAREN LCPAREN BODY RCPAREN .)


state 15

    (2) BODY -> DECL SEMICOL . BODY
    (2) BODY -> . DECL SEMICOL BODY
    (3) BODY -> . ASSIGN SEMICOL BODY
    (4) BODY -> .
    (5) DECL -> . DTYPE DECLIST
    (14) ASSIGN -> . WORD EQUALS Wrhs
    (15) ASSIGN -> . LHS_POINT EQUALS Wrhs
    (13) LHS_POINT -> . REF aID

    RCPAREN         reduce using rule 4 (BODY -> .)
    DTYPE           shift and go to state 10
    WORD            shift and go to state 11
    REF             shift and go to state 13

    DECL                           shift and go to state 8
    BODY                           shift and go to state 27
    ASSIGN                         shift and go to state 9
    LHS_POINT                      shift and go to state 12

state 16

    (3) BODY -> ASSIGN SEMICOL . BODY
    (2) BODY -> . DECL SEMICOL BODY
    (3) BODY -> . ASSIGN SEMICOL BODY
    (4) BODY -> .
    (5) DECL -> . DTYPE DECLIST
    (14) ASSIGN -> . WORD EQUALS Wrhs
    (15) ASSIGN -> . LHS_POINT EQUALS Wrhs
    (13) LHS_POINT -> . REF aID

    RCPAREN         reduce using rule 4 (BODY -> .)
    DTYPE           shift and go to state 10
    WORD            shift and go to state 11
    REF             shift and go to state 13

    ASSIGN                         shift and go to state 9
    BODY                           shift and go to state 28
    DECL                           shift and go to state 8
    LHS_POINT                      shift and go to state 12

state 17

    (5) DECL -> DTYPE DECLIST .

    SEMICOL         reduce using rule 5 (DECL -> DTYPE DECLIST .)


state 18

    (6) DECLIST -> ID . COMMA DECLIST
    (7) DECLIST -> ID .

    COMMA           shift and go to state 29
    SEMICOL         reduce using rule 7 (DECLIST -> ID .)


state 19

    (8) ID -> WORD .

    COMMA           reduce using rule 8 (ID -> WORD .)
    SEMICOL         reduce using rule 8 (ID -> WORD .)


state 20

    (9) ID -> REF . ID
    (8) ID -> . WORD
    (9) ID -> . REF ID

    WORD            shift and go to state 19
    REF             shift and go to state 20

    ID                             shift and go to state 30

state 21

    (14) ASSIGN -> WORD EQUALS . Wrhs
    (16) Wrhs -> . Wrhs PLUS Wrhs
    (17) Wrhs -> . Wrhs MINUS Wrhs
    (18) Wrhs -> . Wrhs REF Wrhs
    (19) Wrhs -> . Wrhs DIV Wrhs
    (20) Wrhs -> . aID
    (21) Wrhs -> . Natom
    (22) Wrhs -> . MINUS Wrhs
    (10) aID -> . WORD
    (11) aID -> . AMP aID
    (12) aID -> . REF aID
    (23) Natom -> . NUMBER

    MINUS           shift and go to state 32
    WORD            shift and go to state 25
    AMP             shift and go to state 26
    REF             shift and go to state 23
    NUMBER          shift and go to state 35

    Wrhs                           shift and go to state 31
    aID                            shift and go to state 33
    Natom                          shift and go to state 34

state 22

    (15) ASSIGN -> LHS_POINT EQUALS . Wrhs
    (16) Wrhs -> . Wrhs PLUS Wrhs
    (17) Wrhs -> . Wrhs MINUS Wrhs
    (18) Wrhs -> . Wrhs REF Wrhs
    (19) Wrhs -> . Wrhs DIV Wrhs
    (20) Wrhs -> . aID
    (21) Wrhs -> . Natom
    (22) Wrhs -> . MINUS Wrhs
    (10) aID -> . WORD
    (11) aID -> . AMP aID
    (12) aID -> . REF aID
    (23) Natom -> . NUMBER

    MINUS           shift and go to state 32
    WORD            shift and go to state 25
    AMP             shift and go to state 26
    REF             shift and go to state 23
    NUMBER          shift and go to state 35

    Wrhs                           shift and go to state 36
    aID                            shift and go to state 33
    Natom                          shift and go to state 34

state 23

    (12) aID -> REF . aID
    (10) aID -> . WORD
    (11) aID -> . AMP aID
    (12) aID -> . REF aID

    WORD            shift and go to state 25
    AMP             shift and go to state 26
    REF             shift and go to state 23

    aID                            shift and go to state 37

state 24

    (13) LHS_POINT -> REF aID .

    EQUALS          reduce using rule 13 (LHS_POINT -> REF aID .)


state 25

    (10) aID -> WORD .

    EQUALS          reduce using rule 10 (aID -> WORD .)
    PLUS            reduce using rule 10 (aID -> WORD .)
    MINUS           reduce using rule 10 (aID -> WORD .)
    REF             reduce using rule 10 (aID -> WORD .)
    DIV             reduce using rule 10 (aID -> WORD .)
    SEMICOL         reduce using rule 10 (aID -> WORD .)


state 26

    (11) aID -> AMP . aID
    (10) aID -> . WORD
    (11) aID -> . AMP aID
    (12) aID -> . REF aID

    WORD            shift and go to state 25
    AMP             shift and go to state 26
    REF             shift and go to state 23

    aID                            shift and go to state 38

state 27

    (2) BODY -> DECL SEMICOL BODY .

    RCPAREN         reduce using rule 2 (BODY -> DECL SEMICOL BODY .)


state 28

    (3) BODY -> ASSIGN SEMICOL BODY .

    RCPAREN         reduce using rule 3 (BODY -> ASSIGN SEMICOL BODY .)


state 29

    (6) DECLIST -> ID COMMA . DECLIST
    (6) DECLIST -> . ID COMMA DECLIST
    (7) DECLIST -> . ID
    (8) ID -> . WORD
    (9) ID -> . REF ID

    WORD            shift and go to state 19
    REF             shift and go to state 20

    ID                             shift and go to state 18
    DECLIST                        shift and go to state 39

state 30

    (9) ID -> REF ID .

    COMMA           reduce using rule 9 (ID -> REF ID .)
    SEMICOL         reduce using rule 9 (ID -> REF ID .)


state 31

    (14) ASSIGN -> WORD EQUALS Wrhs .
    (16) Wrhs -> Wrhs . PLUS Wrhs
    (17) Wrhs -> Wrhs . MINUS Wrhs
    (18) Wrhs -> Wrhs . REF Wrhs
    (19) Wrhs -> Wrhs . DIV Wrhs

    SEMICOL         reduce using rule 14 (ASSIGN -> WORD EQUALS Wrhs .)
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41
    REF             shift and go to state 42
    DIV             shift and go to state 43


state 32

    (22) Wrhs -> MINUS . Wrhs
    (16) Wrhs -> . Wrhs PLUS Wrhs
    (17) Wrhs -> . Wrhs MINUS Wrhs
    (18) Wrhs -> . Wrhs REF Wrhs
    (19) Wrhs -> . Wrhs DIV Wrhs
    (20) Wrhs -> . aID
    (21) Wrhs -> . Natom
    (22) Wrhs -> . MINUS Wrhs
    (10) aID -> . WORD
    (11) aID -> . AMP aID
    (12) aID -> . REF aID
    (23) Natom -> . NUMBER

    MINUS           shift and go to state 32
    WORD            shift and go to state 25
    AMP             shift and go to state 26
    REF             shift and go to state 23
    NUMBER          shift and go to state 35

    Wrhs                           shift and go to state 44
    aID                            shift and go to state 33
    Natom                          shift and go to state 34

state 33

    (20) Wrhs -> aID .

    PLUS            reduce using rule 20 (Wrhs -> aID .)
    MINUS           reduce using rule 20 (Wrhs -> aID .)
    REF             reduce using rule 20 (Wrhs -> aID .)
    DIV             reduce using rule 20 (Wrhs -> aID .)
    SEMICOL         reduce using rule 20 (Wrhs -> aID .)


state 34

    (21) Wrhs -> Natom .

    PLUS            reduce using rule 21 (Wrhs -> Natom .)
    MINUS           reduce using rule 21 (Wrhs -> Natom .)
    REF             reduce using rule 21 (Wrhs -> Natom .)
    DIV             reduce using rule 21 (Wrhs -> Natom .)
    SEMICOL         reduce using rule 21 (Wrhs -> Natom .)


state 35

    (23) Natom -> NUMBER .

    PLUS            reduce using rule 23 (Natom -> NUMBER .)
    MINUS           reduce using rule 23 (Natom -> NUMBER .)
    REF             reduce using rule 23 (Natom -> NUMBER .)
    DIV             reduce using rule 23 (Natom -> NUMBER .)
    SEMICOL         reduce using rule 23 (Natom -> NUMBER .)


state 36

    (15) ASSIGN -> LHS_POINT EQUALS Wrhs .
    (16) Wrhs -> Wrhs . PLUS Wrhs
    (17) Wrhs -> Wrhs . MINUS Wrhs
    (18) Wrhs -> Wrhs . REF Wrhs
    (19) Wrhs -> Wrhs . DIV Wrhs

    SEMICOL         reduce using rule 15 (ASSIGN -> LHS_POINT EQUALS Wrhs .)
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41
    REF             shift and go to state 42
    DIV             shift and go to state 43


state 37

    (12) aID -> REF aID .

    EQUALS          reduce using rule 12 (aID -> REF aID .)
    PLUS            reduce using rule 12 (aID -> REF aID .)
    MINUS           reduce using rule 12 (aID -> REF aID .)
    REF             reduce using rule 12 (aID -> REF aID .)
    DIV             reduce using rule 12 (aID -> REF aID .)
    SEMICOL         reduce using rule 12 (aID -> REF aID .)


state 38

    (11) aID -> AMP aID .

    EQUALS          reduce using rule 11 (aID -> AMP aID .)
    PLUS            reduce using rule 11 (aID -> AMP aID .)
    MINUS           reduce using rule 11 (aID -> AMP aID .)
    REF             reduce using rule 11 (aID -> AMP aID .)
    DIV             reduce using rule 11 (aID -> AMP aID .)
    SEMICOL         reduce using rule 11 (aID -> AMP aID .)


state 39

    (6) DECLIST -> ID COMMA DECLIST .

    SEMICOL         reduce using rule 6 (DECLIST -> ID COMMA DECLIST .)


state 40

    (16) Wrhs -> Wrhs PLUS . Wrhs
    (16) Wrhs -> . Wrhs PLUS Wrhs
    (17) Wrhs -> . Wrhs MINUS Wrhs
    (18) Wrhs -> . Wrhs REF Wrhs
    (19) Wrhs -> . Wrhs DIV Wrhs
    (20) Wrhs -> . aID
    (21) Wrhs -> . Natom
    (22) Wrhs -> . MINUS Wrhs
    (10) aID -> . WORD
    (11) aID -> . AMP aID
    (12) aID -> . REF aID
    (23) Natom -> . NUMBER

    MINUS           shift and go to state 32
    WORD            shift and go to state 25
    AMP             shift and go to state 26
    REF             shift and go to state 23
    NUMBER          shift and go to state 35

    Wrhs                           shift and go to state 45
    aID                            shift and go to state 33
    Natom                          shift and go to state 34

state 41

    (17) Wrhs -> Wrhs MINUS . Wrhs
    (16) Wrhs -> . Wrhs PLUS Wrhs
    (17) Wrhs -> . Wrhs MINUS Wrhs
    (18) Wrhs -> . Wrhs REF Wrhs
    (19) Wrhs -> . Wrhs DIV Wrhs
    (20) Wrhs -> . aID
    (21) Wrhs -> . Natom
    (22) Wrhs -> . MINUS Wrhs
    (10) aID -> . WORD
    (11) aID -> . AMP aID
    (12) aID -> . REF aID
    (23) Natom -> . NUMBER

    MINUS           shift and go to state 32
    WORD            shift and go to state 25
    AMP             shift and go to state 26
    REF             shift and go to state 23
    NUMBER          shift and go to state 35

    Wrhs                           shift and go to state 46
    aID                            shift and go to state 33
    Natom                          shift and go to state 34

state 42

    (18) Wrhs -> Wrhs REF . Wrhs
    (16) Wrhs -> . Wrhs PLUS Wrhs
    (17) Wrhs -> . Wrhs MINUS Wrhs
    (18) Wrhs -> . Wrhs REF Wrhs
    (19) Wrhs -> . Wrhs DIV Wrhs
    (20) Wrhs -> . aID
    (21) Wrhs -> . Natom
    (22) Wrhs -> . MINUS Wrhs
    (10) aID -> . WORD
    (11) aID -> . AMP aID
    (12) aID -> . REF aID
    (23) Natom -> . NUMBER

    MINUS           shift and go to state 32
    WORD            shift and go to state 25
    AMP             shift and go to state 26
    REF             shift and go to state 23
    NUMBER          shift and go to state 35

    Wrhs                           shift and go to state 47
    aID                            shift and go to state 33
    Natom                          shift and go to state 34

state 43

    (19) Wrhs -> Wrhs DIV . Wrhs
    (16) Wrhs -> . Wrhs PLUS Wrhs
    (17) Wrhs -> . Wrhs MINUS Wrhs
    (18) Wrhs -> . Wrhs REF Wrhs
    (19) Wrhs -> . Wrhs DIV Wrhs
    (20) Wrhs -> . aID
    (21) Wrhs -> . Natom
    (22) Wrhs -> . MINUS Wrhs
    (10) aID -> . WORD
    (11) aID -> . AMP aID
    (12) aID -> . REF aID
    (23) Natom -> . NUMBER

    MINUS           shift and go to state 32
    WORD            shift and go to state 25
    AMP             shift and go to state 26
    REF             shift and go to state 23
    NUMBER          shift and go to state 35

    Wrhs                           shift and go to state 48
    aID                            shift and go to state 33
    Natom                          shift and go to state 34

state 44

    (22) Wrhs -> MINUS Wrhs .
    (16) Wrhs -> Wrhs . PLUS Wrhs
    (17) Wrhs -> Wrhs . MINUS Wrhs
    (18) Wrhs -> Wrhs . REF Wrhs
    (19) Wrhs -> Wrhs . DIV Wrhs

    PLUS            reduce using rule 22 (Wrhs -> MINUS Wrhs .)
    MINUS           reduce using rule 22 (Wrhs -> MINUS Wrhs .)
    REF             reduce using rule 22 (Wrhs -> MINUS Wrhs .)
    DIV             reduce using rule 22 (Wrhs -> MINUS Wrhs .)
    SEMICOL         reduce using rule 22 (Wrhs -> MINUS Wrhs .)

  ! PLUS            [ shift and go to state 40 ]
  ! MINUS           [ shift and go to state 41 ]
  ! REF             [ shift and go to state 42 ]
  ! DIV             [ shift and go to state 43 ]


state 45

    (16) Wrhs -> Wrhs PLUS Wrhs .
    (16) Wrhs -> Wrhs . PLUS Wrhs
    (17) Wrhs -> Wrhs . MINUS Wrhs
    (18) Wrhs -> Wrhs . REF Wrhs
    (19) Wrhs -> Wrhs . DIV Wrhs

    PLUS            reduce using rule 16 (Wrhs -> Wrhs PLUS Wrhs .)
    MINUS           reduce using rule 16 (Wrhs -> Wrhs PLUS Wrhs .)
    SEMICOL         reduce using rule 16 (Wrhs -> Wrhs PLUS Wrhs .)
    REF             shift and go to state 42
    DIV             shift and go to state 43

  ! REF             [ reduce using rule 16 (Wrhs -> Wrhs PLUS Wrhs .) ]
  ! DIV             [ reduce using rule 16 (Wrhs -> Wrhs PLUS Wrhs .) ]
  ! PLUS            [ shift and go to state 40 ]
  ! MINUS           [ shift and go to state 41 ]


state 46

    (17) Wrhs -> Wrhs MINUS Wrhs .
    (16) Wrhs -> Wrhs . PLUS Wrhs
    (17) Wrhs -> Wrhs . MINUS Wrhs
    (18) Wrhs -> Wrhs . REF Wrhs
    (19) Wrhs -> Wrhs . DIV Wrhs

    PLUS            reduce using rule 17 (Wrhs -> Wrhs MINUS Wrhs .)
    MINUS           reduce using rule 17 (Wrhs -> Wrhs MINUS Wrhs .)
    SEMICOL         reduce using rule 17 (Wrhs -> Wrhs MINUS Wrhs .)
    REF             shift and go to state 42
    DIV             shift and go to state 43

  ! REF             [ reduce using rule 17 (Wrhs -> Wrhs MINUS Wrhs .) ]
  ! DIV             [ reduce using rule 17 (Wrhs -> Wrhs MINUS Wrhs .) ]
  ! PLUS            [ shift and go to state 40 ]
  ! MINUS           [ shift and go to state 41 ]


state 47

    (18) Wrhs -> Wrhs REF Wrhs .
    (16) Wrhs -> Wrhs . PLUS Wrhs
    (17) Wrhs -> Wrhs . MINUS Wrhs
    (18) Wrhs -> Wrhs . REF Wrhs
    (19) Wrhs -> Wrhs . DIV Wrhs

    PLUS            reduce using rule 18 (Wrhs -> Wrhs REF Wrhs .)
    MINUS           reduce using rule 18 (Wrhs -> Wrhs REF Wrhs .)
    REF             reduce using rule 18 (Wrhs -> Wrhs REF Wrhs .)
    DIV             reduce using rule 18 (Wrhs -> Wrhs REF Wrhs .)
    SEMICOL         reduce using rule 18 (Wrhs -> Wrhs REF Wrhs .)
